Fixed dependabot for my fork + (re)add config for WOPI tests

--- a/examples/ocmd/ocmd-server-1.toml
+++ b/examples/ocmd/ocmd-server-1.toml
@@ -89,6 +89,7 @@ mount_id = "123e4567-e89b-12d3-a456-426655440000"
 expose_data_server = true
 data_server_url = "http://localhost:19001/data"
 enable_home_creation = true
+disable_tus = true
 
 [grpc.services.storageprovider.drivers.localhome]
 user_layout = "{{.Username}}"
@@ -112,6 +113,7 @@ address = "0.0.0.0:19001"
 
 [http.services.dataprovider]
 driver = "localhome"
+disable_tus = true
 
 [http.services.dataprovider.drivers.localhome]
 user_layout = "{{.Username}}"
